# ChangeLog for dev-dotnet/libgdiplus
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/libgdiplus/ChangeLog,v 1.142 2013/04/02 20:56:04 ago Exp $

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libgdiplus-2.10.9.ebuild:
  Stable for ppc64, wrt bug #462890

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> libgdiplus-2.10.9.ebuild:
  Add ~ppc64, wrt bug #455960

  07 Dec 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  libgdiplus-2.10.9.ebuild:
  x86 stable wrt bug #435202

  22 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
  libgdiplus-2.10.9.ebuild:
  stable ppc, bug #435202

  16 Sep 2012; Agostino Sarubbo <ago@gentoo.org> libgdiplus-2.10.9.ebuild:
  Stable for amd64, wrt bug #435202

  09 May 2012; Alexis Ballier <aballier@gentoo.org> libgdiplus-2.10.9.ebuild:
  keyword ~amd64-fbsd

  05 May 2012; Justin Lecher <jlec@gentoo.org> libgdiplus-2.10.9.ebuild,
  +files/libgdiplus-2.10.9-gold.patch:
  Add fix for underlinking detected by gold

*libgdiplus-2.10.9 (04 May 2012)

  04 May 2012; Alistair Bush <ali_bush@gentoo.org> +libgdiplus-2.10.9.ebuild:
  Version Bump.

  01 Jan 2012; Fabio Erculiani <lxnay@gentoo.org> libgdiplus-2.10.ebuild:
  works on ~arm

  13 Nov 2011; Justin Lecher <jlec@gentoo.org> libgdiplus-2.10.ebuild:
  Corrected Slotting of media-libs/tiff and media-libs/libpng

  05 Nov 2011; Samuli Suominen <ssuominen@gentoo.org>
  -libgdiplus-2.6.7-r1.ebuild, -files/libgdiplus-2.6.7-fix-overflows.patch,
  -libgdiplus-2.8.1.ebuild:
  old

  11 May 2011; Christoph Mende <angelos@gentoo.org> libgdiplus-2.10.ebuild:
  Stable on amd64 wrt bug #359651

  07 May 2011; Thomas Kahle <tomka@gentoo.org> libgdiplus-2.10.ebuild:
  x86 stable per bug 359651

  21 Mar 2011; Brent Baude <ranger@gentoo.org> libgdiplus-2.10.ebuild:
  Marking libgdiplus-2.10 ppc stable for bug 359651

*libgdiplus-2.10 (27 Feb 2011)

  27 Feb 2011; Pacho Ramos <pacho@gentoo.org> +libgdiplus-2.10.ebuild,