@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/libgdiplus/libgdiplus-2.10.ebuild,v 1.6 2012/01/01 15:28:20 lxnay Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/libgdiplus/libgdiplus-2.10.ebuild,v 1.7 2013/08/27 15:59:50 kensington Exp $
 
 EAPI=2
 
@@ -24,7 +24,7 @@ RDEPEND=">=dev-libs/glib-2.16:2
 		>=x11-libs/cairo-1.8.4[X]
 		media-libs/libexif
 		>=media-libs/giflib-4.1.3
-		virtual/jpeg
+		virtual/jpeg:0
 		media-libs/tiff:0
 		!cairo? ( >=x11-libs/pango-1.20 )"
 DEPEND="${RDEPEND}"
