@@ -1,6 +1,10 @@
 # ChangeLog for dev-dotnet/libgdiplus
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/libgdiplus/ChangeLog,v 1.142 2013/04/02 20:56:04 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/libgdiplus/ChangeLog,v 1.143 2013/08/27 15:59:50 kensington Exp $
+
+  27 Aug 2013; Michael Palimaka <kensington@gentoo.org>
+  libgdiplus-2.10.9.ebuild, libgdiplus-2.10.ebuild:
+  Pin virtual/jpeg SLOT to 0.
 
   02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libgdiplus-2.10.9.ebuild:
   Stable for ppc64, wrt bug #462890
